# thread_process

./: .gitignore  README.md  stat.sh
dining_philosophers_problem/: CMakeLists.txt  dpp.c  dpp.h  process.c  thread.c
producer_consumer_problem/: CMakeLists.txt  pcp.c  pcp.h  process.c  thread.c
simple/: CMakeLists.txt  process_lock.c  process_lock_posix_ver.c  thread_lock.c
